# llm-rag-enterprise-assistant

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: settings.example.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
scripts/: benchmark.py  ingest_sample.py
src/rag_platform/: __init__.py
src/rag_platform/api/: __init__.py  app.py
src/rag_platform/core/: __init__.py  config.py  models.py  pipeline.py
src/rag_platform/evaluation/: evaluate.py
src/rag_platform/generation/: __init__.py  generator.py
src/rag_platform/ingestion/: chunker.py  loaders.py  store.py
src/rag_platform/observability/: __init__.py  metrics.py
src/rag_platform/retrieval/: __init__.py  embeddings.py  hybrid.py  sparse.py  vector_store.py
src/rag_platform/web/: app.js  index.html  styles.css
tests/: test_api.py  test_chunker.py  test_loaders.py  test_pipeline.py  test_retrieval.py
