[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-rag-enterprise-assistant"
version = "0.1.0"
description = "Production-oriented enterprise RAG assistant with hybrid retrieval and vLLM integration points."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.5"]
faiss = ["faiss-cpu>=1.8"]
torch = ["torch>=2.3"]
langchain = ["langchain>=0.2", "langchain-community>=0.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rag_platform = ["web/*.html", "web/*.css", "web/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
